2002-11-20  Klee Dienes  <kdienes@apple.com>

	* config/tc-mcore.c (md_begin): Use a const iterator.  Don't
	coalesce the name fields to use the same pointer.

	* config/tc-sh.c (md_begin): Use a const iterator.  Don't coalesce
	the name fields to use the same pointer.
	(get_specific): Check for opcodes with the same name using strcmp
	as well as comparing the pointer.

2002-11-20  Alan Modra  <amodra@bigpond.net.au>

	* write.c (adjust_reloc_syms): Don't reduce SEC_MERGE fixups with
	fx_subsy non-NULL.

2002-11-19  Richard Henderson  <rth@redhat.com>

	* config/obj-elf.c (obj_elf_visibility): Overwrite only the
	visibility portion of st_other.

2002-11-19  Klee Dienes  <kdienes@apple.com>

	* config/tc-h8300.c (struct h8_instruction): New type, used to
	wrap h8_opcodes with length, noperands, idx, and size fields
	(computed at run-time).
	(h8_instructions): New variable.
	(md_begin): Allocate the storage for h8_instructions.  Fill
	h8_instructions with pointers to the appropriate opcode and the
	correct value for the additional fields.
	(clever_message): Update to use h8_instructions instead of
	h8_opcodes.
	(build_bytes): Ditto.
	(get_specific): Ditto.
	(md_assemble): Ditto.

2002-11-19  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* config/tc-s390.c (tc_s390_fix_adjustable): Re-add patch to prevent
	adjustments to symbols in merge sections.

2002-11-19  Luke Deller <luked@cse.unsw.edu.au>

	* config/tc-alpha.c (s_alpha_prologue): as_bad when sym is NULL.

2002-11-18  Kevin Buettner  <kevinb@redhat.com>

	* dwarf2dbg.h (dwarf2_format): New enum.
	* dwarf2dbg.c (DWARF2_FORMAT): Provide default definition.
	(out_debug_line, out_debug_info): Add code for handling 64-bit
	DWARF 2 formats.
	* config/tc-mips.h (mips_dwarf2_format): Declare.
	* config/tc-mips.c (mips_dwarf2_format): New function.
	* doc/internals.texi (DWARF2_FORMAT): Document.

2002-11-18  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-mips.c (s_change_section): Make sure input buffer